地图的接口完成

--- a/FindElectricity/FEMap/View/FEMapCategView.xib
+++ b/FindElectricity/FEMap/View/FEMapCategView.xib
@@ -41,7 +41,7 @@
                         <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="tzF-Ye-vpR">
                             <rect key="frame" x="20" y="50" width="42" height="74"/>
                             <subviews>
-                                <button opaque="NO" tag="2" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Lu2-u2-W9F">
+                                <button opaque="NO" tag="2" contentMode="scaleToFill" selected="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Lu2-u2-W9F">
                                     <rect key="frame" x="0.0" y="0.0" width="42" height="42"/>
                                     <constraints>
                                         <constraint firstAttribute="width" constant="42" id="p6b-v9-0uw"/>
@@ -87,7 +87,7 @@
                         <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="dUe-2I-5R8">
                             <rect key="frame" x="119" y="50" width="42" height="74"/>
                             <subviews>
-                                <button opaque="NO" tag="3" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="bY3-W9-PZA">
+                                <button opaque="NO" tag="1" contentMode="scaleToFill" selected="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="bY3-W9-PZA">
                                     <rect key="frame" x="0.0" y="0.0" width="42" height="42"/>
                                     <constraints>
                                         <constraint firstAttribute="height" constant="42" id="Ik3-ex-ahR"/>
@@ -133,7 +133,7 @@
                         <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Vnp-8U-oBa">
                             <rect key="frame" x="218" y="50" width="42" height="74"/>
                             <subviews>
-                                <button opaque="NO" tag="1" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="0z7-9k-HuP">
+                                <button opaque="NO" tag="3" contentMode="scaleToFill" selected="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="0z7-9k-HuP">
                                     <rect key="frame" x="0.0" y="0.0" width="42" height="42"/>
                                     <constraints>
                                         <constraint firstAttribute="height" constant="42" id="Etw-d7-cmX"/>
