--- a/FindElectricity/FEMine/ViewController/FEAboutViewController.xib
+++ b/FindElectricity/FEMine/ViewController/FEAboutViewController.xib
@@ -66,6 +66,9 @@
                     <state key="normal" title="获取最新版本">
                         <color key="titleColor" red="0.015686274510000001" green="0.73333333329999995" blue="0.1764705882" alpha="1" colorSpace="calibratedRGB"/>
                     </state>
+                    <connections>
+                        <action selector="updateAct:" destination="-1" eventType="touchUpInside" id="Nsx-VR-HH8"/>
+                    </connections>
                 </button>
             </subviews>
             <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
