修改UI和增加地图跳转

--- a/FindElectricity/FEMine/ViewController/FEChangePhoneViewController.xib
+++ b/FindElectricity/FEMine/ViewController/FEChangePhoneViewController.xib
@@ -23,7 +23,7 @@
             <subviews>
                 <view contentMode="scaleToFill" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="ebr-mk-DLK">
                     <rect key="frame" x="0.0" y="0.0" width="375" height="132"/>
-                    <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                    <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMaxY="YES"/>
                     <subviews>
                         <textField opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="请输入新的手机号码" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="KMn-fq-A27">
                             <rect key="frame" x="10" y="15" width="247" height="34"/>
